# echo-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  devbox.json  pyproject.toml
.github/workflows/: dynamic.yaml  publish.yaml
.github/workflows/dynamic-jobs/: job-a.yaml  job-b.yaml
src/echo/: main.py
tests/echo/: echo_test.py
