[tool.poetry]
name = "echo"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Jason McClellan", "jason@jasonmcclellan.io"]

[tool.poetry.dependencies]
python = "^3.12"
starlette = "^0.46.0"
uvicorn = "^0.34.0"
prometheus-fastapi-instrumentator = "^7.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7"
basedpyright = "^1.28.1"
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]
pythonpath = ["src", "tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
